force-app/main/default/objects/VehicleAuctionBreakdown__c/VehicleAuctionBreakdown__c.object-meta.xml
<CustomObject>
    <description>To Store the Vehicle KBB breakdown information</description>
    <label>VehicleAuctionBreakdown</label>
    <nameField>
        <label>VehicleAuctionBreakdown Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VehicleAuctionBreakdowns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>