force-app/main/default/objects/VehicleAuctionBreakdown__c/fields/RetailPrice__c.field-meta.xml
<CustomField>
    <fullName>RetailPrice__c</fullName>
    <description>Retail value suggested by KBB</description>
    <label>Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>