force-app/main/default/objects/VehicleAuctionBreakdown__c/fields/SelectedOption__c.field-meta.xml
<CustomField>
    <fullName>SelectedOption__c</fullName>
    <description>Options for the vehicle</description>
    <label>Selected Option</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>