force-app/main/default/objects/VehicleAuctionBreakdown__c/fields/Wholesale__c.field-meta.xml
<CustomField>
    <fullName>Wholesale__c</fullName>
    <description>Wholesale value given by KBB</description>
    <label>Wholesale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>